--- a/recipes/protein_shake.html
+++ b/recipes/protein_shake.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Peanut Butter Protein Shake</h1>
-        <a href="/index.html">Home</a>
+        <a href="/https://thelonehobbyist.github.io/odin-recipes/">Home</a>
 
         <h3>Ingredients</h3>
         <ul>
